updating out details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am computer programmer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Chicago, IL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Traveling, Reading, Sports</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p> Full Stack Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Norristown, PA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It is fun to write code and develop websites</p>
     </section>
 
     <footer id="footer">
